[#18] - Change reporting page's app name

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -78,6 +78,8 @@ dhis-web-maintenance-in=Configuration
 dhis-web-linelisting-mp=Manpower
 dhis-web-maintenance-rbf=Maintenance RBF
 
+reporting-page=Reporting Page
+
 #-- Intro modules -------------------------------------------------------------#
 
 intro_dhis-web-maintenance-datadictionary=Maintain data elements, indicators, categories and groups.
