--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
@@ -39,6 +39,8 @@ M_dhis-web-tracker-capture=See Tracker Capture module
 M_dhis-web-event-visualizer=See Event Visualizer module
 M_dhis-web-cache-cleaner=See Browser Cache Cleaner module
 
+M_reporting-page=See Reporting Page module
+
 #-- User action privilegies ---------------------------------------------------#
 
 F_CONCEPT_ADD=Add/Update Concept
