--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
@@ -341,6 +341,15 @@ firstName=First name
 edit_user=Update user
 confirm_delete_user=Are you sure you want to delete this user?
 retype_password=Retype password
+work_phone=Work Phone
+telephone=Telephone
+org_type=Organisation Type
+org_name=Organisation Name
+notes=Notes
+user_role=User Role
+email_alert=Email Alert
+sms_alert=SMS Alert
+locations=Locations
 organisation_unit=Organisation unit
 adding_role_failed=Adding role failed
 members=Members
