[#i18n] release i18n to reporting page

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/resources/org/hisp/dhis/user/i18n_module.properties
@@ -347,8 +347,8 @@ org_type=Organisation Type
 org_name=Organisation Name
 notes=Notes
 user_role=User Role
-email_alert=Email Alert
-sms_alert=SMS Alert
+email_alert=Receive Email alerts
+sms_alert=Receive SMS alerts
 locations=Locations
 organisation_unit=Organisation unit
 adding_role_failed=Adding role failed
