[#SSL] - Change cert file's format to pem

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -6,7 +6,7 @@ server {
 
 server {
   listen 443 ssl;
-  ssl_certificate /opt/dhis2/config/ssl/dhis2.crt;
+  ssl_certificate /opt/dhis2/config/ssl/dhis2.pem;
   ssl_certificate_key /opt/dhis2/config/ssl/dhis2.key;
   server_name example.com;
 
