[#SSL] - Change cert and private key's name

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -6,8 +6,8 @@ server {
 
 server {
   listen 443 ssl;
-  ssl_certificate /opt/dhis2/config/ssl/dhis2.pem;
-  ssl_certificate_key /opt/dhis2/config/ssl/dhis2.key;
+  ssl_certificate /opt/dhis2/config/ssl/fullchain.pem;
+  ssl_certificate_key /opt/dhis2/config/ssl/privkey.pem;
   server_name example.com;
 
   location / {
