[#Deployment] - Add domain name

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name <SERVER_NAME>;
+  server_name portalmbes.com www.portalmbes.com;
   rewrite ^(.*)$ https://$host:443$1 redirect;
 }
 
