[#Deployment] - close nginx temporarily for debug

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -5,10 +5,16 @@ server {
 }
 
 server {
+  listen 8080;
+  server_name portalmbes.com www.portalmbes.com;
+  rewrite ^(.*)$ https://$host:443$1 redirect;
+}
+
+server {
   listen 443 ssl;
   ssl_certificate /opt/dhis2/config/ssl/fullchain.pem;
   ssl_certificate_key /opt/dhis2/config/ssl/privkey.pem;
-  server_name example.com;
+  server_name portalmbes.com www.portalmbes.com;
 
   location / {
     proxy_pass http://127.0.0.1:8080/;
