[#Deployment] - Update nginx config file

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -1,16 +1,50 @@
-server {
-  listen 80;
-  server_name portalmbes.com www.portalmbes.com;
-  rewrite ^(.*)$ https://$host:443$1 redirect;
+events {
+    worker_connections 768;
+    # multi_accept on;
 }
 
-server {
-  listen 443 ssl;
-  ssl_certificate /opt/dhis2/config/ssl/fullchain.pem;
-  ssl_certificate_key /opt/dhis2/config/ssl/privkey.pem;
-  server_name portalmbes.com www.portalmbes.com;
+http {
+  # ...
+  root              /usr/local/tomcat/webapps/ROOT; # Update path!
+  proxy_cache_path  /var/cache/nginx  keys_zone=dhis:250m  inactive=1d;
+  gzip              on;
 
-  location / {
-    proxy_pass http://localhost:8080/;
+  # HTTP server - rewrite to force use of HTTPS
+
+  server {
+    listen     80;
+    rewrite    ^ https://$host$request_uri? permanent;
+  }
+
+  # HTTPS server
+
+  server {
+    listen               443 ssl;
+    client_max_body_size 10M;
+
+    ssl                  on;
+    ssl_certificate      /opt/dhis2/config/ssl/fullchain.pem;
+    ssl_certificate_key  /opt/dhis2/config/ssl/privkey.pem;
+
+    ssl_session_timeout  30m;
+
+    ssl_protocols              SSLv2 SSLv3 TLSv1;
+    ssl_ciphers                HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers  on;
+
+    # Proxy pass to servlet container and potentially cache response
+
+    location / {
+      proxy_pass                http://localhost:8080/;
+      proxy_redirect            off;
+      proxy_set_header          Host               $host;
+      proxy_set_header          X-Real-IP          $remote_addr;
+      proxy_set_header          X-Forwarded-For    $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto  https;
+      proxy_buffer_size         128k;
+      proxy_buffers             8 128k;
+      proxy_busy_buffers_size   256k;
+      proxy_cache               dhis;
+    }
   }
 }
