Add translation form some term.

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -1077,3 +1077,4 @@ category_option_group=Category Option Group
 #-- Object names --------------------------------------------------------#
 manage_my_apps=Manage my apps
 no_results_found=No results found
+visible_in_default_rule_type=visible in default rule type
