--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
@@ -163,3 +163,5 @@ customed_validation_rule_Sarampo=Sarampo: Cases in recent ( A ) EPI week(s) > ( 
 customed_validaiton_rule_Meningite=Meningite: Cases increases by ( A ) times in recent ( B ) consecutive weeks
 customed_validation_rule_malaria=Malária: Cases > average from current week + ( A ) earlier weeks to current week - ( B ) later weeks in past ( C ) years + ( D ) * std dev
 customed_validation_rule_disenteria=Disenteria: Cases > average for same week in last ( A ) years + ( B ) * std dev
+additional_rule=Additional Rule
+visible_in_default_rule_type=visible in default rule type
