Correct the validation type name.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
@@ -159,9 +159,9 @@ skip_if_any_value_is_missing=Skip if any value is missing
 skip_if_all_values_are_missing=Skip if all values are missing
 never_skip=Never skip
 no_organisation_unit_selected=No organisation unit selected
-customed_validation_rule_Sarampo=Sarampo: Cases in recent ( A ) EPI week(s) > ( B )
-customed_validaiton_rule_Meningite=Meningite: Cases increases by ( A ) times in recent ( B ) consecutive weeks
-customed_validation_rule_malaria=Malária: Cases > average from current week + ( A ) earlier weeks to current week - ( B ) later weeks in past ( C ) years + ( D ) * std dev
-customed_validation_rule_disenteria=Disenteria: Cases > average for same week in last ( A ) years + ( B ) * std dev
+customed_validation_rule_Sarampo=Measles: Cases in recent ( A ) EPI week(s) > ( B )
+customed_validaiton_rule_Meningite=Meningitis: Cases increases by ( A ) times in recent ( B ) consecutive weeks
+customed_validation_rule_malaria=Malaria: Cases > average from current week + ( A ) earlier weeks to current week - ( B ) later weeks in past ( C ) years + ( D ) * std dev
+customed_validation_rule_disenteria=Dysentery: Cases > average for same week in last ( A ) years + ( B ) * std dev
 additional_rule=Additional Rule
 visible_in_default_rule_type=visible in default rule type
