Add translation for donut chart title and labels.

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
@@ -145,3 +145,9 @@ changes_saved=Changes saved
 email_alert=Email Alert
 sms_alert=SMS Alert
 donut_name=Doughnut
+donut_title=National mBES submission data for week
+hf_total_num=Total number of Health Facilities existent
+hf_using_num=Health facilities are using the mBES system
+hf_completed=Health facilities have submitted their completed mBES
+hf_incomplete=Health facilities have submitted an incomplete mBES
+hf_not_summited=Health facilities have not submitted their mBES
