[33] Add alert configuration page and save data to dhis2.

--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/resources/org/hisp/dhis/de/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/resources/org/hisp/dhis/de/i18n_module.properties
@@ -118,3 +118,5 @@ are_you_sure_you_want_to_delete_this_file=Are you sure you want to delete this f
 confirm_deletion=Confirm deletion
 file_upload_failed=File upload failed
 loading_file_info_failed=Loading file info failed
+validation_configuration=Validation Configuration
+alert_configuration=Alert Configuration
