--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
@@ -89,6 +89,7 @@ intro_stddevoutlier_analysis=Analyze potential outlier values based on standard 
 intro_minmaxoutlier_analysis=Analyze potential outlier values based on min and max values. Outlier values can be examined and marked for follow-up.
 intro_gap_analysis=Perform analysis of potential missing values, referred to as gaps. Missing values can be entered or marked for follow-up.
 intro_followup_analysis=View or edit data values marked for further follow-up during data entry or analysis.
+intro_alert_configuration=View or edit alert configuration.
 value_must_be_a_number=Value must be a number
 value_is_lower_than_min_value=Value is lower than minimum value
 value_is_higher_than_max_value=Value is higher than maximum value
@@ -165,3 +166,5 @@ customed_validation_rule_malaria=Malaria: Cases > average from current week + ( 
 customed_validation_rule_disenteria=Dysentery: Cases > average for same week in last ( A ) years + ( B ) * std dev
 additional_rule=Additional Rule
 visible_in_default_rule_type=visible in default rule type
+validation_configuration=Validation Configuration
+alert_configuration=Alert Configuration
