Add translation for alert configuration.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
@@ -89,7 +89,7 @@ intro_stddevoutlier_analysis=Analyze potential outlier values based on standard 
 intro_minmaxoutlier_analysis=Analyze potential outlier values based on min and max values. Outlier values can be examined and marked for follow-up.
 intro_gap_analysis=Perform analysis of potential missing values, referred to as gaps. Missing values can be entered or marked for follow-up.
 intro_followup_analysis=View or edit data values marked for further follow-up during data entry or analysis.
-intro_alert_configuration=View or edit alert configuration.
+intro_alert_configuration=Config alert frequency which defines when should the alerts be triggered.
 value_must_be_a_number=Value must be a number
 value_is_lower_than_min_value=Value is lower than minimum value
 value_is_higher_than_max_value=Value is higher than maximum value
@@ -168,3 +168,13 @@ additional_rule=Additional Rule
 visible_in_default_rule_type=visible in default rule type
 validation_configuration=Validation Configuration
 alert_configuration=Alert Configuration
+Sun=Sun
+Mon=Mon
+Tue=Tue
+Wed=Wed
+Thu=Thu
+Fri=Fri
+Sat=Sat
+please_define_the_dates_for_alerts=Please define the dates for alerts
+Date=Date
+Time=Time
