[# 33] Give hints when alert configuration is updated.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/resources/org/hisp/dhis/validationrule/i18n_module.properties
@@ -178,3 +178,4 @@ Sat=Sat
 please_define_the_dates_for_alerts=Please define the dates for alerts
 Date=Date
 Time=Time
+alert_configuration_saved=Alert configuration saved
