--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/package.json
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/package.json
@@ -18,28 +18,37 @@
     "serve:dist": "node server.js --env=dist",
     "start": "node server.js --env=dev",
     "test": "karma start",
-    "test:watch": "karma start --autoWatch=true --singleRun=false"
+    "test:watch": "karma start --autoWatch=true --singleRun=false",
+    "build": "cross-env NODE_ENV=production UV_THREADPOOL_SIZE=100 webpack --config webpack.config"
   },
   "repository": "",
   "keywords": [],
   "author": "Your name here",
   "devDependencies": {
+    "autoprefixer": "~6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-react-transform": "~2.0.2",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
+    "classnames": "^2.2.5",
     "copyfiles": "^1.0.0",
-    "css-loader": "^0.23.0",
+    "cross-env": "~2.0.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.0.0",
     "eslint-loader": "^1.0.0",
+    "eslint-plugin-babel": "~3.2.0",
     "eslint-plugin-react": "^6.0.0",
+    "express": "~4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
+    "internal-ip": "~1.2.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^1.0.0",
     "karma-chai": "^0.1.0",
@@ -51,25 +60,108 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
+    "node-sass": "~3.8.0",
+    "normalize.css": "~4.2.0",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
+    "postcss-loader": "^0.10.1",
+    "react": "~15.3.0",
+    "react-addons-css-transition-group": "~15.3.0",
     "react-addons-test-utils": "^15.0.0",
+    "react-addons-update": "~15.3.0",
+    "react-dom": "~15.3.0",
     "react-hot-loader": "^1.2.9",
+    "react-tap-event-plugin": "^1.0.0",
+    "react-toolbox": "~1.1.2",
+    "react-transform-catch-errors": "~1.0.0",
+    "react-transform-hmr": "~1.0.1",
+    "redbox-react": "~1.3.0",
     "rimraf": "^2.4.3",
-    "style-loader": "^0.13.0",
+    "sass-lint": "~1.7.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.2",
+    "toolbox-loader": "0.0.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
+    "webpack-dev-middleware": "~1.6.1",
     "webpack-dev-server": "^1.12.0",
-    "extract-text-webpack-plugin": "^1.0.1"
+    "webpack-hot-middleware": "~2.12.2"
   },
   "dependencies": {
-    "core-js": "^2.0.0",
+    "autoprefixer": "~6.4.0",
     "axios": "^0.15.3",
+    "babel-core": "^6.0.0",
+    "babel-eslint": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-react-transform": "~2.0.2",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.7",
+    "bower-webpack-plugin": "^0.1.9",
+    "chai": "^3.2.0",
+    "classnames": "^2.2.5",
+    "copyfiles": "^1.0.0",
+    "core-js": "^2.0.0",
+    "cross-env": "~2.0.0",
+    "css-loader": "^0.23.0",
+    "d2": "^25.1.8",
+    "d2-ui": "^24.1.21",
+    "eslint": "^3.0.0",
+    "eslint-loader": "^1.0.0",
+    "eslint-plugin-babel": "~3.2.0",
+    "eslint-plugin-react": "^6.0.0",
+    "express": "~4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "glob": "^7.0.0",
+    "internal-ip": "~1.2.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "karma": "^1.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.0",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
+    "lodash": "^4.15.0",
+    "material-ui": "^0.14.4",
+    "minimist": "^1.2.0",
+    "mocha": "^3.0.0",
     "moment": "^2.17.1",
+    "node-sass": "~3.8.0",
     "normalize.css": "^4.0.0",
+    "null-loader": "^0.1.1",
+    "open": "0.0.5",
+    "phantomjs-prebuilt": "^2.0.0",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "~0.10.1",
     "react": "^15.0.0",
+    "react-addons-css-transition-group": "~15.3.0",
+    "react-addons-test-utils": "^15.0.0",
+    "react-addons-update": "~15.3.0",
+    "react-bootstrap-treeview": "^0.1.0",
     "react-dom": "^15.0.0",
-    "victory-pie": "^7.2.0"
+    "react-hot-loader": "^1.2.9",
+    "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
+    "react-toolbox": "~1.1.2",
+    "react-transform-catch-errors": "~1.0.0",
+    "react-transform-hmr": "~1.0.1",
+    "redbox-react": "~1.3.0",
+    "rimraf": "^2.4.3",
+    "sass-lint": "~1.7.0",
+    "sass-loader": "~4.0.0",
+    "style-loader": "^0.13.0",
+    "treeview-react-bootstrap": "^0.4.6",
+    "url-loader": "^0.5.6",
+    "victory-pie": "^7.2.0",
+    "webpack": "^1.12.0",
+    "webpack-dev-middleware": "~1.6.1",
+    "webpack-dev-server": "^1.12.0",
+    "webpack-hot-middleware": "~2.12.2"
   }
 }
