--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/package.json
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/package.json
@@ -74,6 +74,7 @@
     "material-ui": "0.14.4",
     "moment": "^2.15.0",
     "react-bootstrap-treeview": "^0.1.0",
+    "react-paginate": "^4.4.2",
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0",
     "treeview-react-bootstrap": "^0.4.6"
