--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/package.json
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/package.json
@@ -151,6 +151,7 @@
     "webpack": "^1.12.0",
     "webpack-dev-middleware": "~1.6.1",
     "webpack-dev-server": "^1.12.0",
-    "webpack-hot-middleware": "~2.12.2"
+    "webpack-hot-middleware": "~2.12.2",
+    "react-paginate": "^4.4.2"
   }
 }
