[#45][wangyue] Integrated the new version

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
@@ -151,3 +151,4 @@ hf_using_num=Health facilities are using the mBES system
 hf_completed=Health facilities have submitted their completed mBES
 hf_incomplete=Health facilities have submitted an incomplete mBES
 hf_not_summited=Health facilities have not submitted their mBES
+alert_log=Alert Log
