modify nginx configuration: add gzip

--- a/dhis.nginx.conf
+++ b/dhis.nginx.conf
@@ -7,7 +7,14 @@ http {
   # ...
   root              /usr/local/tomcat/webapps/ROOT; # Update path!
   proxy_cache_path  /var/cache/nginx  keys_zone=dhis:250m  inactive=1d;
+
   gzip              on;
+  gzip_min_length   1k;
+  gzip_buffers     4 32k;
+  gzip_http_version 1.1;
+  gzip_comp_level 6;
+  gzip_types  text/css text/xml application/javascript;
+  gzip_vary on;
 
   # HTTP server - rewrite to force use of HTTPS
 
