[TPS-289][Wang Yue] - modify the page style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/resources/org/hisp/dhis/dashboard/i18n_module.properties
@@ -152,4 +152,4 @@ hf_completed=Health facilities have submitted their completed mBES
 hf_incomplete=Health facilities have submitted an incomplete mBES
 hf_not_summited=Health facilities have not submitted their mBES
 alert_log=Alert Log
-submission=Todas Submicoes
+submission=All Submission Report
